[tool.poetry]
name = "homework 10-1"
version = "1"
description = ""
authors = ["Саид <said_ccc@mail.ru>"]
readme = "README.md"
packages = [{include = "homework 10"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
